Fixed Maven packaging. Updated to use Java 11 Http Client